@@ -22,6 +22,7 @@ _languages = {}
 
 def get_language(language_code):
     for tag in normalize_language_tag(language_code):
+        tag = tag.replace('-','_') # '-' not valid in module names
         if tag in _languages:
             return _languages[tag]
         try:
